commit change architecture